fix: cleanup multiple spacing issues (#129)

--- a/assets/styles/components/_instagram.scss
+++ b/assets/styles/components/_instagram.scss
@@ -339,8 +339,8 @@ Instagram feed styles
 /* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
 @media screen and (max-width: 600px) {
     .column {
-        -ms-flex: 100%;
-        flex: 100%;
+        -ms-flex: 50%;
+        flex: 50%;
         max-width: 100%;
     }
 }
